--- a/app/src/main/res/layout/fragment_course_add.xml
+++ b/app/src/main/res/layout/fragment_course_add.xml
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.AddYearFragment">
+    tools:context=".fragment.CourseAddFragment">
+
+    <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,16 +24,16 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textFragmentName"
+                    android:id="@+id/textView9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Year"
+                    android:text="Courses"
                     android:textColor="@color/colorGray"
                     android:textSize="40sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/addEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -41,7 +43,7 @@
                     android:textSize="14sp" />
 
                 <View
-                    android:id="@+id/divider6"
+                    android:id="@+id/divider11"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="5dp"
@@ -68,44 +70,66 @@
             android:orientation="vertical"
             android:padding="10dp">
 
+            <EditText
+                android:id="@+id/courseName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="course name"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
+                android:textSize="14sp"
+                android:theme="@style/editTextPadrao" />
+
+            <EditText
+                android:id="@+id/courseAcronym"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="acronym"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
+                android:textSize="14sp"
+                android:theme="@style/editTextPadrao" />
+
             <TextView
-                android:id="@+id/textDiscipline"
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Select a year:"
+                android:text="Select an university:"
                 android:textColor="@color/colorGray"
                 android:textSize="14sp" />
 
             <com.toptoche.searchablespinnerlibrary.SearchableSpinner
-                android:id="@+id/spinnerYears"
+                android:id="@+id/spinnerUniversity"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:dropDownWidth="wrap_content"
-                android:outlineSpotShadowColor="@color/colorGray"
-                android:padding="10dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:orientation="horizontal"/>
+                android:ems="10"
+                android:outlineSpotShadowColor="@color/colorGray" />
 
             <Button
-                android:id="@+id/buttonAdd"
+                android:id="@+id/buttonCourse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="40dp"
                 android:layout_weight="1"
                 android:text="ADD"
-                android:theme="@style/botaoPadraoBrown" />
+                android:theme="@style/botaoPadraoGreen" />
 
         </LinearLayout>
 
     </LinearLayout>
-
 </FrameLayout>
