--- a/app/src/main/res/layout/fragment_student_add.xml
+++ b/app/src/main/res/layout/fragment_student_add.xml
@@ -2,7 +2,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragment.AddStudentFragment">
+        tools:context=".fragment.StudentAddFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                         android:id="@+id/textView6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Admin People"
+                        android:text="Student"
                         android:textColor="@color/colorGray"
                         android:textSize="40sp"
                         android:textStyle="bold" />
@@ -68,7 +68,7 @@
                 android:padding="10dp">
 
                 <EditText
-                    android:id="@+id/adminPeopleFirstName"
+                    android:id="@+id/studentFirstName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
@@ -83,7 +83,7 @@
                     android:theme="@style/editTextPadrao" />
 
                 <EditText
-                    android:id="@+id/adminPeopleLastName"
+                    android:id="@+id/studentLastName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
@@ -98,7 +98,7 @@
                     android:theme="@style/editTextPadrao" />
 
                 <EditText
-                    android:id="@+id/adminPeopleEmail"
+                    android:id="@+id/studentEmail"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
@@ -112,8 +112,44 @@
                     android:textSize="14sp"
                     android:theme="@style/editTextPadrao" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView16"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            android:layout_weight="1"
+                            android:text="Is delegate?"
+                            android:textColor="@color/colorGray"
+                            android:textSize="14sp" />
+
+                        <ToggleButton
+                            android:id="@+id/isDelegateButton"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="ToggleButton"
+                            android:textOff="NO"
+                            android:textOn="YES" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
                 <Button
-                    android:id="@+id/buttonAdminPeople"
+                    android:id="@+id/buttonStudents"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
