--- a/app/src/main/res/layout/fragment_year_main.xml
+++ b/app/src/main/res/layout/fragment_year_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.AddUniversityFragment">
+    tools:context=".fragment.UniversityAddFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
