--- a/app/src/main/res/layout/fragment_university_add.xml
+++ b/app/src/main/res/layout/fragment_university_add.xml
@@ -4,13 +4,22 @@
     android:layout_height="match_parent"
     tools:context=".fragment.UniversityAddFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/backToPrevious"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:drawableLeft="@drawable/ic_seta_voltar_24dp"
+            android:gravity="center"
+            android:text="BACK TO UNIVERSITIES MAIN SCREEN"
+            android:textColor="@color/colorButtonNewBrown"
+            android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,84 +27,64 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="310dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView14"
+                    android:id="@+id/textFragmentName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="University"
+                    android:text="Universities"
                     android:textColor="@color/colorGray"
                     android:textSize="40sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/addEdit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="-10dp"
-                    android:text="add new"
-                    android:textColor="@color/colorBright"
-                    android:textSize="14sp" />
-
-                <View
-                    android:id="@+id/divider9"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="5dp"
-                    android:background="?android:attr/listDivider" />
-
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/backToAddEditMain"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_seta_voltar_24dp"
-                android:gravity="center"
-                android:paddingTop="20dp"
-                android:text="back"
-                android:textColor="@color/colorBright"
-                android:textSize="14sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             android:padding="10dp">
+
+            <TextView
+                android:id="@+id/textUniversity"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="University name" />
 
             <EditText
                 android:id="@+id/universityName"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:ems="10"
                 android:hint="university name"
-                android:textColorHint="@color/colorLightGray"
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
+                android:textColorHint="@color/colorLightGray"
                 android:textSize="16sp"
                 android:theme="@style/editTextPadrao" />
 
             <EditText
                 android:id="@+id/universityAcronym"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:ems="10"
                 android:hint="university acronym"
-                android:textColorHint="@color/colorLightGray"
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
+                android:textColorHint="@color/colorLightGray"
                 android:textSize="16sp"
                 android:theme="@style/editTextPadrao" />
 
@@ -106,10 +95,9 @@
                 android:layout_marginTop="40dp"
                 android:layout_weight="1"
                 android:text="ADD"
-                android:theme="@style/botaoPadraoGreen" />
+                android:theme="@style/botaoPadraoBrown" />
 
         </LinearLayout>
-
     </LinearLayout>
 
 </FrameLayout>
