criada interface Discipline criada classe DateTimeCutom alterações no model Classes e ClassAddFragment, ClassMainActivity alterações nos layouts de activity_class_main e fragment_class_add

--- a/app/src/main/res/layout/activity_class_main.xml
+++ b/app/src/main/res/layout/activity_class_main.xml
@@ -22,9 +22,11 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
-        layout="@layout/fragment_class_add"
+    <FrameLayout
+        android:id="@+id/frameClassMain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 
 </LinearLayout>
