--- a/app/src/main/res/layout/fragment_class_add.xml
+++ b/app/src/main/res/layout/fragment_class_add.xml
@@ -171,7 +171,7 @@
                 android:inputType="textMultiLine" />
 
             <Button
-                android:id="@+id/buttonAdd"
+                android:id="@+id/buttonClassAdd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
