--- a/app/src/main/res/layout-v21/fragment_university_main.xml
+++ b/app/src/main/res/layout-v21/fragment_university_main.xml
@@ -54,6 +54,7 @@
                 android:id="@+id/textListUniversities"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:gravity="start"
                 android:text="Listing added universities"
