--- a/app/src/main/res/layout/fragment_course_add.xml
+++ b/app/src/main/res/layout/fragment_course_add.xml
@@ -5,13 +5,22 @@
     android:layout_height="match_parent"
     tools:context=".fragment.CourseAddFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/backToPrevious"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:drawableLeft="@drawable/ic_seta_voltar_24dp"
+            android:gravity="center"
+            android:text="BACK TO COURSES MAIN SCREEN"
+            android:textColor="@color/colorButtonNewBrown"
+            android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,48 +28,20 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="310dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/textFragmentName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="Courses"
                     android:textColor="@color/colorGray"
                     android:textSize="40sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/addEdit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="-10dp"
-                    android:text="add new"
-                    android:textColor="@color/colorBright"
-                    android:textSize="14sp" />
-
-                <View
-                    android:id="@+id/divider11"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="5dp"
-                    android:background="?android:attr/listDivider" />
-
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/backToAddEditMain"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_seta_voltar_24dp"
-                android:gravity="center"
-                android:paddingTop="20dp"
-                android:text="back"
-                android:textColor="@color/colorBright"
-                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -114,11 +95,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:dropDownWidth="wrap_content"
                 android:ems="10"
-                android:outlineSpotShadowColor="@color/colorGray" />
+                android:outlineSpotShadowColor="@color/colorGray"
+                android:padding="10dp" />
 
             <Button
                 android:id="@+id/buttonCourse"
@@ -127,7 +108,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_weight="1"
                 android:text="ADD"
-                android:theme="@style/botaoPadraoGreen" />
+                android:theme="@style/botaoPadraoBrown" />
 
         </LinearLayout>
 
