--- a/app/src/main/res/layout/fragment_year_main.xml
+++ b/app/src/main/res/layout/fragment_year_main.xml
@@ -51,9 +51,10 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textListUniversities"
+                android:id="@+id/textListYears"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:gravity="start"
                 android:text="Listing added years"
