--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,88 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.UserProfileActivity">
+    tools:context=".activity.UserProfileActivity"
+    android:orientation="vertical"
+    >
 
-    <LinearLayout
-        android:id="@+id/linearGeral"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorBackGroundGreen"
-        android:orientation="vertical"
-        tools:context=".activity.PlannerMainActivity"
-        tools:layout_editor_absoluteX="210dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <LinearLayout
-            android:id="@+id/linearBarraTop"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="15dp"
+            android:layout_height="?attr/actionBarSize"
             android:background="@drawable/bg_add_edit_brown"
-            android:orientation="horizontal">
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        </LinearLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:background="@color/colorBright"
-            android:orientation="horizontal">
+    <FrameLayout
+        android:id="@+id/frameAddEditUserProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="1dp"
+        android:foregroundGravity="center"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="84dp">
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="61dp"
-                android:layout_height="wrap_content"
-                android:baselineAlignBottom="false"
-                android:scaleType="fitStart"
-                app:srcCompat="@drawable/logo_duas_linhas" />
+    </FrameLayout>
 
-            <LinearLayout
-                android:id="@+id/linearTitle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/cadastroid"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="App Preferences"
-                    android:textSize="26sp"
-                    android:typeface="sans" />
-
-                <TextView
-                    android:id="@+id/textViewEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Customize System Parameters"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearFrame"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorBright"
-            android:orientation="horizontal">
-
-            <FrameLayout
-                android:id="@+id/frameAddEditUserProfile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="1dp"
-                android:background="@drawable/bg_add_edit_brown"
-                android:foregroundGravity="center"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
