--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -15,47 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="310dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textFragmentName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="User Profile"
-                    android:textColor="@color/colorGray"
-                    android:textSize="40sp"
-                    android:textStyle="bold" />
-
-                <View
-                    android:id="@+id/divider6"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="5dp"
-                    android:background="?android:attr/listDivider" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/backToHome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_seta_voltar_24dp"
-                android:gravity="center"
-                android:paddingTop="20dp"
-                android:text="back"
-                android:textColor="@color/colorBright"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -67,7 +27,7 @@
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="32dp"
                 android:src="@drawable/profile"
-                app:civ_border_color="#FFFFFF"
+                app:civ_border_color="@color/colorButtonNewBrown"
                 app:civ_border_width="2dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +61,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_weight="1"
                 android:text="EDIT PROFILE"
-                android:theme="@style/botaoPadraoGreen" />
+                android:theme="@style/botaoPadraoBrown" />
 
         </LinearLayout>
 
