--- a/app/src/main/res/layout/fragment_user_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_user_profile_edit.xml
@@ -10,7 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/backToPrevious"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:drawableLeft="@drawable/ic_seta_voltar_24dp"
+            android:gravity="center"
+            android:text="BACK TO PROFILE MAIN SCREEN"
+            android:textColor="@color/colorButtonNewBrown"
+            android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,38 +29,9 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="310dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textFragmentName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Edit User Profile"
-                    android:textColor="@color/colorGray"
-                    android:textSize="40sp"
-                    android:textStyle="bold" />
-
-                <View
-                    android:id="@+id/divider6"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="5dp"
-                    android:background="?android:attr/listDivider" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/backToUserProfile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_seta_voltar_24dp"
-                android:gravity="center"
-                android:paddingTop="20dp"
-                android:text="back"
-                android:textColor="@color/colorBright"
-                android:textSize="14sp" />
+                android:orientation="vertical"/>
 
         </LinearLayout>
 
@@ -67,7 +49,7 @@
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="32dp"
                 android:src="@drawable/profile"
-                app:civ_border_color="#FFFFFF"
+                app:civ_border_color="@color/colorButtonNewBrown"
                 app:civ_border_width="2dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +86,10 @@
                 android:id="@+id/btnSaveUserProfileFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Save" />
+                android:layout_marginTop="30dp"
+                android:layout_weight="1"
+                android:text="update"
+                android:theme="@style/botaoPadraoBrown" />
 
         </LinearLayout>
 
