--- a/app/src/main/res/layout-v21/lista_recycler_admin_people.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_admin_people.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
-    android:background="@color/colorBackGroundBrown"
     android:orientation="vertical">
 
     <LinearLayout
@@ -46,7 +45,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:text="lastName"
-                        android:textColor="@color/colorBright" />
+                        android:textColor="@color/colorBright"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
