--- a/app/src/main/res/layout/fragment_student_main.xml
+++ b/app/src/main/res/layout/fragment_student_main.xml
@@ -8,7 +8,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/backToPrevious"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:drawableLeft="@drawable/ic_seta_voltar_24dp"
+            android:gravity="center"
+            android:text="BACK TO SETTINGS MAIN SCREEN"
+            android:textColor="@color/colorButtonNewBrown"
+            android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -16,7 +27,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="310dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
@@ -24,40 +35,12 @@
                     android:id="@+id/textFragmentName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Student"
+                    android:text="Students"
                     android:textColor="@color/colorGray"
                     android:textSize="40sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="-10dp"
-                    android:text="add/edit/remove"
-                    android:textColor="@color/colorBright"
-                    android:textSize="14sp" />
-
-                <View
-                    android:id="@+id/divider8"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="5dp"
-                    android:background="?android:attr/listDivider" />
-
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/backToAddEditMain"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_seta_voltar_24dp"
-                android:gravity="center"
-                android:paddingTop="20dp"
-                android:text="back"
-                android:textColor="@color/colorBright"
-                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -73,13 +56,14 @@
                 android:id="@+id/textListUniversities"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:gravity="start"
-                android:text="Students List"
+                android:text="Listing added students"
                 android:textSize="14sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recylcerStudents"
+                android:id="@+id/recyclerStudents"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="6dp"
@@ -92,7 +76,7 @@
             android:id="@+id/linerLayoutAddGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="2dp"
             android:orientation="vertical">
 
             <Button
@@ -102,7 +86,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_weight="1"
                 android:text="ADD NEW"
-                android:theme="@style/botaoPadraoGreen" />
+                android:theme="@style/botaoPadraoBrown" />
 
         </LinearLayout>
 
