--- a/app/src/main/res/layout/dialog_model_delete_request.xml
+++ b/app/src/main/res/layout/dialog_model_delete_request.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:background="@color/colorBackGroundBrown"
         android:padding="10dp">
 
         <ImageView
@@ -30,16 +29,8 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
-            android:background="#A3A03235"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="42dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/logo_duas_linhas" />
+            android:orientation="horizontal"
+            android:padding="5dp">
 
             <LinearLayout
                 android:layout_width="100dp"
@@ -53,17 +44,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="#B71C1C"
                     android:gravity="start"
                     android:text="DELETE REQUEST"
+                    android:textAlignment="center"
                     android:textSize="30sp" />
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="delete System Parameters"
-                    android:textSize="12sp" />
 
             </LinearLayout>
 
@@ -72,19 +57,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="100dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="30dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 android:layout_weight="0"
                 android:padding="10dp"
-                android:text="Please confirm this request\n\nWARNING: Deleting this item will result in the deletion of all data linked to it"
-                android:textAlignment="textStart"
-                android:textColor="@color/colorBright"
+                android:text="Please confirm this request\nWARNING: Deleting this item will result in the deletion of all data linked to it"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
