--- a/app/src/main/res/layout/content_nav_main.xml
+++ b/app/src/main/res/layout/content_nav_main.xml
@@ -12,9 +12,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.2">
-
-    </FrameLayout>
+        android:layout_weight="0.2"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabButton"
