Fixing month to use 2 characteres on save

--- a/app/src/main/res/layout/fragment_class_add.xml
+++ b/app/src/main/res/layout/fragment_class_add.xml
@@ -127,6 +127,7 @@
                         android:id="@+id/spinnerDuration"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_gravity="center"
                         android:dropDownWidth="match_parent"
                         android:textAlignment="center" />
 
