--- a/app/src/main/res/layout/content_nav_main.xml
+++ b/app/src/main/res/layout/content_nav_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.NavMainActivity"
     tools:showIn="@layout/app_bar_nav_main"
@@ -12,15 +13,88 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.2"/>
+        android:layout_gravity="bottom|end"
+        android:layout_weight="0.2">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabButton"
-        android:layout_width="match_parent"
+    </FrameLayout>
+
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fab_menu"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_margin="10dp"
-        android:background="@color/colorButtonNewBrown"
-        android:clickable="true"
-        app:srcCompat="@drawable/ic_add_white_24dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        fab:menu_animationDelayPerItem="50"
+        fab:menu_backgroundColor="@android:color/transparent"
+        fab:menu_buttonSpacing="0dp"
+        fab:menu_colorNormal="@color/menu_fab"
+        fab:menu_colorPressed="@color/fab_colorPressed"
+        fab:menu_colorRipple="#99FFFFFF"
+        fab:menu_fab_size="normal"
+        fab:menu_icon="@drawable/fab_add"
+        fab:menu_labels_colorNormal="#333333"
+        fab:menu_labels_colorPressed="#444444"
+        fab:menu_labels_colorRipple="#66FFFFFF"
+        fab:menu_labels_cornerRadius="3dp"
+        fab:menu_labels_ellipsize="none"
+        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
+        fab:menu_labels_margin="0dp"
+        fab:menu_labels_maxLines="-1"
+        fab:menu_labels_padding="8dp"
+        fab:menu_labels_paddingBottom="4dp"
+        fab:menu_labels_paddingLeft="8dp"
+        fab:menu_labels_paddingRight="8dp"
+        fab:menu_labels_paddingTop="4dp"
+        fab:menu_labels_position="left"
+        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
+        fab:menu_labels_showShadow="true"
+        fab:menu_labels_singleLine="false"
+        fab:menu_labels_textColor="#FFFFFF"
+        fab:menu_labels_textSize="14sp"
+        fab:menu_openDirection="up"
+        fab:menu_shadowColor="#66000000"
+        fab:menu_shadowRadius="4dp"
+        fab:menu_shadowXOffset="1dp"
+        fab:menu_shadowYOffset="3dp"
+        fab:menu_showShadow="true">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_contact_hour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="addContactHour"
+            android:src="@drawable/fab_add"
+            app:fab_colorNormal="@color/fab_contactHour_colorNormal"
+            app:fab_colorPressed="@color/fab_colorPressed"
+            fab:fab_label="Contact Hour"
+            fab:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_special_class"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="addSpecialClass"
+            android:src="@drawable/fab_add"
+            app:fab_colorNormal="@color/fab_specialClass_colorNormal"
+            app:fab_colorPressed="@color/fab_colorPressed"
+            fab:fab_label="Special Class"
+            fab:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_regular_class"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="addRegularClass"
+            android:src="@drawable/fab_add"
+            app:fab_colorNormal="@color/fab_regularClass_colorNormal"
+            app:fab_colorPressed="@color/fab_colorPressed"
+            fab:fab_label="Regular Class"
+            fab:fab_size="mini" />
+
+    </com.github.clans.fab.FloatingActionMenu>
+
 </LinearLayout>
