--- a/app/src/main/res/menu/activity_nav_main_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_main_drawer.xml
@@ -5,13 +5,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_crud_home"
-            android:title="@string/menu_home" />
-        <item
             android:id="@+id/nav_events"
             android:icon="@drawable/icons8_calendar_12_50_black"
             android:title="@string/menu_events" />
+        <item
+            android:id="@+id/nav_messages"
+            android:icon="@android:drawable/sym_action_email"
+            android:title="@string/menu_messages" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
