Adjusting lista_recycler_classes

--- a/app/src/main/res/layout-v21/lista_recycler_events_calendar.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_events_calendar.xml
@@ -37,6 +37,26 @@
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/classDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2.2"
+                    android:text="classDate"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/classTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2.2"
+                    android:text="classtime"
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -49,29 +69,9 @@
                     android:id="@+id/classNameDiscipline"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1.5"
+                    android:layout_weight="0.4"
                     android:text="classNameDiscipline"
                     android:textAlignment="textStart"
-                    android:textColor="@android:color/white"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/classDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="classDate"
-                    android:textAlignment="viewStart"
-                    android:textColor="@android:color/white"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/classTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="classtime"
-                    android:textAlignment="viewStart"
                     android:textColor="@android:color/white"
                     android:textSize="12sp" />
 
@@ -79,9 +79,25 @@
                     android:id="@+id/classTimeDuration"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:text="classDuration"
-                    android:textAlignment="viewStart"
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:paddingRight="2dp" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:text="hours"
                     android:textColor="@android:color/white"
                     android:textSize="12sp" />
 
