--- a/app/src/main/res/layout/lista_recycler_classes.xml
+++ b/app/src/main/res/layout/lista_recycler_classes.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -15,11 +16,10 @@
         android:padding="10dp">
 
         <LinearLayout
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="04"
-            android:orientation="vertical"
-            android:paddingStart="10dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
