StudentUpdateFragment colocando student nas disciplinas

--- a/app/src/main/res/layout/fragment_class_add.xml
+++ b/app/src/main/res/layout/fragment_class_add.xml
@@ -120,7 +120,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Time Duration (in hours):"
+                        android:text="Time Duration"
                         android:textSize="16sp" />
 
                     <Spinner
